--- a/styles/media/media_1080.css
+++ b/styles/media/media_1080.css
@@ -4,7 +4,6 @@
 
 .about-me__hero {
     width: 80%;
-    height: 50vh;
 }
 
 .about-me__hero > img {
